--- a/src/modules/example/app/app.html
+++ b/src/modules/example/app/app.html
@@ -1,8 +1,187 @@
 <template>
     <main>
-        <img src="/public/assets/recipes-logo.png" alt="logo" />
-        <h1>Hello World!11</h1>
-        <button class="slds-button slds-button_brand slds-size_1-of-2">Add to Cart</button>
+        <section role="tabpanel" aria-expanded="true" class="tabs__content active uiTab" data-aura-rendered-by="2054:0"
+            data-aura-class="uiTab" id="2050:0"><!--render facet: 2058:0-->
+            <div data-component-id="force_detailPanel" data-target-selection-name="force_detailPanel"
+                data-aura-rendered-by="2059:0" class="flexipageComponent" data-aura-class="flexipageComponent">
+                <!--render facet: 2063:0--><!--render facet: 2065:0--><!--render facet: 2068:0--><!--render facet: 2069:0--><!--render facet: 2071:0--><!--render facet: 2073:0-->
+                <div data-aura-rendered-by="2075:0"
+                    class="slds-clearfix slds-card groupDependentFieldEnabled  allow-horizontal-form full-width forceDetailPanelDesktop"
+                    data-aura-class="forceDetailPanelDesktop">
+                    <div data-aura-rendered-by="2076:0"></div>
+                    <article data-aura-rendered-by="2078:0"><!--render facet: 2079:0-->
+                        <div data-aura-rendered-by="2080:0"></div>
+                        <h2 class="slds-assistive-text" data-aura-rendered-by="2082:0">Details</h2>
+                        <div class="test-id__record-layout-container riseTransitionEnabled"
+                            data-aura-rendered-by="2084:0">
+                            <div class="full forcePageBlock forceRecordLayout" data-aura-rendered-by="248:2492;a"
+                                data-aura-class="forcePageBlock forceRecordLayout">
+                                <div class="test-id__section slds-section  slds-is-open full forcePageBlockSection forcePageBlockSectionView"
+                                    data-aura-rendered-by="86:2492;a"
+                                    data-aura-class="forcePageBlockSection forcePageBlockSectionView">
+                                    <!--render facet: 87:2492;a-->
+                                    <div class="test-id__section-content slds-section__content section__content slds-p-top--none"
+                                        data-aura-rendered-by="88:2492;a" id="4:2492;a">
+                                        <div class="slds-form slds-form_stacked " data-aura-rendered-by="89:2492;a">
+                                            <div class="slds-grid slds-gutters_small full cols-2 forcePageBlockSectionRow"
+                                                data-aura-rendered-by="43:2492;a"
+                                                data-aura-class="forcePageBlockSectionRow">
+                                                <div class="slds-col slds-grid slds-has-flexi-truncate  full forcePageBlockItem forcePageBlockItemView"
+                                                    data-aura-rendered-by="11:2492;a"
+                                                    data-aura-class="forcePageBlockItem forcePageBlockItemView">
+                                                    <div class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element"
+                                                        data-aura-rendered-by="12:2492;a">
+                                                        <div class="test-id__field-label-container slds-form-element__label"
+                                                            data-aura-rendered-by="13:2492;a"><span
+                                                                class="test-id__field-label"
+                                                                data-aura-rendered-by="14:2492;a">Product Name</span>
+                                                        </div>
+                                                        <div class="slds-form-element__control slds-grid itemBody"
+                                                            data-aura-rendered-by="16:2492;a"><span
+                                                                class="test-id__field-value slds-form-element__static slds-grow  is-read-only"
+                                                                data-aura-rendered-by="17:2492;a"><span
+                                                                    data-aura-rendered-by="9:2492;a"
+                                                                    class="uiOutputText"
+                                                                    data-aura-class="uiOutputText">Samsung</span></span><!--render facet: 19:2492;a--><!--render facet: 20:2492;a-->
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="slds-col slds-grid slds-has-flexi-truncate  full forcePageBlockItem forcePageBlockItemView"
+                                                    data-aura-rendered-by="30:2492;a"
+                                                    data-aura-class="forcePageBlockItem forcePageBlockItemView">
+                                                    <div class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element"
+                                                        data-aura-rendered-by="31:2492;a">
+                                                        <div class="test-id__field-label-container slds-form-element__label"
+                                                            data-aura-rendered-by="32:2492;a"><span
+                                                                class="test-id__field-label"
+                                                                data-aura-rendered-by="33:2492;a">Active</span></div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="slds-grid slds-gutters_small full cols-2 forcePageBlockSectionRow"
+                                                data-aura-rendered-by="82:2492;a"
+                                                data-aura-class="forcePageBlockSectionRow">
+                                                <div class="slds-col slds-grid slds-has-flexi-truncate  full forcePageBlockItem forcePageBlockItemView"
+                                                    data-aura-rendered-by="51:2492;a"
+                                                    data-aura-class="forcePageBlockItem forcePageBlockItemView">
+                                                    <div class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element"
+                                                        data-aura-rendered-by="52:2492;a">
+                                                        <div class="test-id__field-label-container slds-form-element__label"
+                                                            data-aura-rendered-by="53:2492;a"><span
+                                                                class="test-id__field-label"
+                                                                data-aura-rendered-by="54:2492;a">Product Code</span>
+                                                        </div>
+                                                        <div class="slds-form-element__control slds-grid itemBody"
+                                                            data-aura-rendered-by="56:2492;a"><span
+                                                                class="test-id__field-value slds-form-element__static slds-grow  is-read-only"
+                                                                data-aura-rendered-by="57:2492;a"><span
+                                                                    data-aura-rendered-by="49:2492;a"
+                                                                    class="uiOutputText"
+                                                                    data-aura-class="uiOutputText">Samsung</span></span><!--render facet: 59:2492;a--><!--render facet: 60:2492;a-->
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="slds-col slds-grid slds-has-flexi-truncate  full forcePageBlockItem forcePageBlockItemView"
+                                                    data-aura-rendered-by="69:2492;a"
+                                                    data-aura-class="forcePageBlockItem forcePageBlockItemView">
+                                                    <div class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element"
+                                                        data-aura-rendered-by="70:2492;a">
+                                                        <div class="test-id__field-label-container slds-form-element__label"
+                                                            data-aura-rendered-by="71:2492;a"><span
+                                                                class="test-id__field-label"
+                                                                data-aura-rendered-by="72:2492;a">Product Family</span>
+                                                        </div>
+                                                        <div class="slds-form-element__control slds-grid itemBody"
+                                                            data-aura-rendered-by="74:2492;a"><span
+                                                                class="test-id__field-value slds-form-element__static slds-grow  is-read-only"
+                                                                data-aura-rendered-by="75:2492;a"><span
+                                                                    data-aura-rendered-by="66:2492;a"></span></span><!--render facet: 77:2492;a--><!--render facet: 78:2492;a-->
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="test-id__section slds-section  slds-is-open full forcePageBlockSection forcePageBlockSectionView"
+                                    data-aura-rendered-by="213:2492;a"
+                                    data-aura-class="forcePageBlockSection forcePageBlockSectionView">
+                                    <!--render facet: 214:2492;a-->
+                                    <div class="test-id__section-content slds-section__content section__content slds-p-top--none"
+                                        data-aura-rendered-by="215:2492;a" id="90:2492;a">
+                                        <div class="slds-form slds-form_stacked " data-aura-rendered-by="216:2492;a">
+                                            <div class="slds-grid slds-gutters_small full cols-2 forcePageBlockSectionRow"
+                                                data-aura-rendered-by="209:2492;a"
+                                                data-aura-class="forcePageBlockSectionRow">
+                                                <div class="slds-col slds-grid slds-has-flexi-truncate  full forcePageBlockItem forcePageBlockItemView"
+                                                    data-aura-rendered-by="138:2492;a"
+                                                    data-aura-class="forcePageBlockItem forcePageBlockItemView">
+                                                    <div class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element"
+                                                        data-aura-rendered-by="139:2492;a">
+                                                        <div class="test-id__field-label-container slds-form-element__label"
+                                                            data-aura-rendered-by="140:2492;a"><span
+                                                                class="test-id__field-label"
+                                                                data-aura-rendered-by="141:2492;a">Created By</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="slds-col slds-grid slds-has-flexi-truncate  full forcePageBlockItem forcePageBlockItemView"
+                                                    data-aura-rendered-by="196:2492;a"
+                                                    data-aura-class="forcePageBlockItem forcePageBlockItemView">
+                                                    <div class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element"
+                                                        data-aura-rendered-by="197:2492;a">
+                                                        <div class="test-id__field-label-container slds-form-element__label"
+                                                            data-aura-rendered-by="198:2492;a"><span
+                                                                class="test-id__field-label"
+                                                                data-aura-rendered-by="199:2492;a">Last Modified
+                                                                By</span></div>
 
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="test-id__section slds-section  slds-is-open full forcePageBlockSection forcePageBlockSectionView"
+                                    data-aura-rendered-by="243:2492;a"
+                                    data-aura-class="forcePageBlockSection forcePageBlockSectionView">
+                                    <!--render facet: 244:2492;a-->
+                                    <div class="test-id__section-content slds-section__content section__content slds-p-top--none"
+                                        data-aura-rendered-by="245:2492;a" id="217:2492;a">
+                                        <div class="slds-form slds-form_stacked " data-aura-rendered-by="246:2492;a">
+                                            <div class="slds-grid slds-gutters_small full cols-1 forcePageBlockSectionRow"
+                                                data-aura-rendered-by="239:2492;a"
+                                                data-aura-class="forcePageBlockSectionRow">
+                                                <div class="slds-col slds-grid slds-has-flexi-truncate  full long-text forcePageBlockItem forcePageBlockItemView"
+                                                    data-aura-rendered-by="226:2492;a"
+                                                    data-aura-class="forcePageBlockItem forcePageBlockItemView">
+                                                    <div class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element"
+                                                        data-aura-rendered-by="227:2492;a">
+                                                        <div class="test-id__field-label-container slds-form-element__label"
+                                                            data-aura-rendered-by="228:2492;a"><span
+                                                                class="test-id__field-label"
+                                                                data-aura-rendered-by="229:2492;a">Product
+                                                                Description</span></div>
+                                                        <div class="slds-form-element__control slds-grid itemBody"
+                                                            data-aura-rendered-by="231:2492;a"><span
+                                                                class="test-id__field-value slds-form-element__static slds-grow  is-read-only"
+                                                                data-aura-rendered-by="232:2492;a"><span
+                                                                    data-aura-rendered-by="222:2492;a"
+                                                                    class="uiOutputTextArea"
+                                                                    data-aura-class="uiOutputTextArea">The samsung
+                                                                    phone</span></span><!--render facet: 234:2492;a--><!--render facet: 235:2492;a-->
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div><!--render facet: 2085:0--><!--render facet: 2086:0-->
+                    </article>
+                </div>
+            </div>
+        </section>
     </main>
 </template>
