able to open and close section

--- a/src/modules/example/app/app.html
+++ b/src/modules/example/app/app.html
@@ -183,5 +183,200 @@
                 </div>
             </div>
         </section>
+        <div>{hello}</div>
+
+        <!-- another ironman -->
+        <div class="slds-section slds-is-open">
+            <h3 class="slds-section__title" onclick={hideSection}>
+                <button aria-controls="expando-unique-id" aria-expanded="true"
+                    class="slds-button slds-section__title-action" onclick={hideSection}>
+                    <svg class="slds-section__title-action-icon slds-button__icon slds-button__icon_left"
+                        aria-hidden="true">
+                        <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#switch"></use>
+                    </svg>
+                    <span class="slds-truncate" title="Section Title">Section Title</span>
+                </button>
+            </h3>
+            <div class="test-id__section slds-section  slds-is-open full forcePageBlockSection forcePageBlockSectionView"
+                data-aura-rendered-by="86:760;a" data-aura-class="forcePageBlockSection forcePageBlockSectionView">
+                <!--render facet: 87:760;a-->
+                <div class="test-id__section-content slds-section__content section__content slds-p-top--none"
+                    data-aura-rendered-by="88:760;a" id="4:760;a">
+                    <div class="slds-form slds-form_stacked " data-aura-rendered-by="89:760;a">
+                        <div class="slds-grid slds-gutters_small full cols-2 forcePageBlockSectionRow"
+                            data-aura-rendered-by="42:760;a" data-aura-class="forcePageBlockSectionRow">
+                            <div data-target-selection-name="sfdc:RecordField.Product2.Name"
+                                class="slds-col slds-grid slds-has-flexi-truncate  full forcePageBlockItem forcePageBlockItemView"
+                                data-aura-rendered-by="11:760;a"
+                                data-aura-class="forcePageBlockItem forcePageBlockItemView">
+                                <div class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element"
+                                    data-aura-rendered-by="12:760;a">
+                                    <div class="test-id__field-label-container slds-form-element__label"
+                                        data-aura-rendered-by="13:760;a"><span class="test-id__field-label"
+                                            data-aura-rendered-by="14:760;a">Product Name</span></div>
+                                    <div class="slds-form-element__control slds-grid itemBody"
+                                        data-aura-rendered-by="16:760;a"><span
+                                            class="test-id__field-value slds-form-element__static slds-grow  is-read-only"
+                                            data-aura-rendered-by="17:760;a"><span data-aura-rendered-by="9:760;a"
+                                                class="uiOutputText" data-aura-class="uiOutputText">Samsung
+                                                Galaxy</span></span><!--render facet: 19:760;a--><!--render facet: 20:760;a-->
+                                    </div>
+                                </div>
+                            </div>
+                            <div data-target-selection-name="sfdc:RecordField.Product2.Family"
+                                class="slds-col slds-grid slds-has-flexi-truncate  full forcePageBlockItem forcePageBlockItemView"
+                                data-aura-rendered-by="29:760;a"
+                                data-aura-class="forcePageBlockItem forcePageBlockItemView">
+                                <div class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element"
+                                    data-aura-rendered-by="30:760;a">
+                                    <div class="test-id__field-label-container slds-form-element__label"
+                                        data-aura-rendered-by="31:760;a"><span class="test-id__field-label"
+                                            data-aura-rendered-by="32:760;a">Product Family</span></div>
+                                    <div class="slds-form-element__control slds-grid itemBody"
+                                        data-aura-rendered-by="34:760;a"><span
+                                            class="test-id__field-value slds-form-element__static slds-grow  is-read-only"
+                                            data-aura-rendered-by="35:760;a"><span
+                                                data-aura-rendered-by="26:760;a"></span></span><!--render facet: 37:760;a--><!--render facet: 38:760;a-->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slds-grid slds-gutters_small full cols-2 forcePageBlockSectionRow"
+                            data-aura-rendered-by="82:760;a" data-aura-class="forcePageBlockSectionRow">
+                            <div data-target-selection-name="sfdc:RecordField.Product2.ProductCode"
+                                class="slds-col slds-grid slds-has-flexi-truncate  full forcePageBlockItem forcePageBlockItemView"
+                                data-aura-rendered-by="50:760;a"
+                                data-aura-class="forcePageBlockItem forcePageBlockItemView">
+                                <div class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element"
+                                    data-aura-rendered-by="51:760;a">
+                                    <div class="test-id__field-label-container slds-form-element__label"
+                                        data-aura-rendered-by="52:760;a"><span class="test-id__field-label"
+                                            data-aura-rendered-by="53:760;a">Product Code</span></div>
+                                    <div class="slds-form-element__control slds-grid itemBody"
+                                        data-aura-rendered-by="55:760;a"><span
+                                            class="test-id__field-value slds-form-element__static slds-grow  is-read-only"
+                                            data-aura-rendered-by="56:760;a"><span data-aura-rendered-by="48:760;a"
+                                                class="uiOutputText"
+                                                data-aura-class="uiOutputText"></span></span><!--render facet: 58:760;a--><!--render facet: 59:760;a-->
+                                    </div>
+                                </div>
+                            </div>
+                            <div data-target-selection-name="sfdc:RecordField.Product2.IsActive"
+                                class="slds-col slds-grid slds-has-flexi-truncate  full forcePageBlockItem forcePageBlockItemView"
+                                data-aura-rendered-by="69:760;a"
+                                data-aura-class="forcePageBlockItem forcePageBlockItemView">
+                                <div class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element"
+                                    data-aura-rendered-by="70:760;a">
+                                    <div class="test-id__field-label-container slds-form-element__label"
+                                        data-aura-rendered-by="71:760;a"><span class="test-id__field-label"
+                                            data-aura-rendered-by="72:760;a">Active</span></div>
+                                    <div class="slds-form-element__control slds-grid itemBody"
+                                        data-aura-rendered-by="74:760;a"><span
+                                            class="test-id__field-value slds-form-element__static slds-grow  is-read-only"
+                                            data-aura-rendered-by="75:760;a"><span data-aura-rendered-by="67:760;a"
+                                                class="uiImage uiOutputCheckbox"
+                                                data-aura-class="uiImage uiOutputCheckbox"><img
+                                                    data-aura-rendered-by="65:760;a" src="/auraFW/resources/aura/s.gif"
+                                                    class=" checked"
+                                                    alt="True"></span></span><!--render facet: 77:760;a--><!--render facet: 78:760;a-->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <template for:each={attributeCategories} for:item="attributeCategory" for:index="index">
+            <div class="slds-section slds-is-open  unique-slds-section" key={attributeCategory.name}>
+                <h3 class="slds-section__title" onclick={hideSection}>
+                    <button aria-controls="expando-unique-id" aria-expanded="true"
+                        class="slds-button slds-section__title-action">
+                        <svg class="slds-section__title-action-icon slds-button__icon slds-button__icon_left"
+                            aria-hidden="true">
+                            <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#switch"></use>
+                        </svg>
+                        <span class="slds-truncate" title={attributeCategory.name}>{attributeCategory.name}</span>
+                    </button>
+                </h3>
+                <div class="slds-section">
+                    <div class="slds-section__content section__content slds-p-top--none">
+                        <template for:each={attributeCategory.records} for:item="record" for:index="index2">
+                            <div class="slds-section slds-is-open" key={record.attributeCategoryId}>
+                                <div class="slds-form slds-form_stacked ">
+                                    <div class="slds-grid slds-gutters_small full cols-2">
+                                        <div class="slds-col slds-grid slds-has-flexi-truncate">
+                                            <div
+                                                class="slds-form-element slds-form-element_readonly slds-grow slds-hint-parent override--slds-form-element">
+                                                <div class="slds-form-element__label">
+                                                    {record.label}
+                                                </div>
+                                                <div class="slds-form-element__control slds-grid itemBody">
+                                                    <template if:true={record.defaultValue}>
+                                                        {record.defaultValue}
+                                                    </template>
+                                                    <template if:false={record.defaultValue}>
+                                                        <!-- {record.attributePickList.values} -->
+                                                        <template if:true={record.attributePickList}>
+                                                            <template for:each={record.attributePickList.values}
+                                                                for:item="picklistValue" for:index="index3">
+                                                                <span
+                                                                    key={picklistValue.code}>{picklistValue.displayValue},
+                                                                </span>
+                                                            </template>
+                                                        </template>
+                                                    </template>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </template>
+                    </div>
+                </div>
+
+            </div>
+        </template>
+        <div class="slds-section slds-is-open" onclick={handleShowListAction}>
+            <h3 class="slds-section__title slds-theme_shade">
+                <span class="slds-truncate slds-p-horizontal_small" title="Section Title">SectionTitle</span>
+            </h3>
+            <div class="slds-form__row">
+                <div class="slds-form__item" role="listitem">
+                    <div
+                        class="slds-form-element slds-form-element_edit slds-form-element_readonly slds-form-element_stacked slds-hint-parent">
+                        <span class="slds-form-element__label">SectionTitle</span>
+                        <div class="slds-form-element__control">
+                            <div class="slds-form-element__static">
+                                <lightning-formatted-url label="SectionTitle" value="SectionTitle"
+                                    target="_blank"></lightning-formatted-url>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="slds-form__row">
+                <div class="slds-form__item" role="listitem">
+                    <div
+                        class="slds-form-element slds-form-element_edit slds-form-element_readonly slds-form-element_stacked slds-hint-parent">
+                        <span class="slds-form-element__label">SectionTitle</span>
+                        <div class="slds-form-element__control">
+                            <div class="slds-form-element__static">
+                                <template if:true={clientCertificateUrl}>
+                                    <lightning-formatted-url label="SectionTitle" value="SectionTitle"
+                                        target="_blank"></lightning-formatted-url>
+                                </template>
+                                <template if:false={clientCertificateUrl}>
+                                    "SectionTitle"
+                                </template>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
+
 </template>
